// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ignore location and field length norm Check order of entries when location and field-length norm are ignored 1`] = `
Array [
  Object {
    "item": "Module with Promise-aware beforeEach",
    "refIndex": 3,
    "score": 0.09090909090909091,
  },
  Object {
    "item": "Module with Promise-aware afterEach",
    "refIndex": 5,
    "score": 0.2727272727272727,
  },
  Object {
    "item": "Promise-aware return values without beforeEach/afterEach",
    "refIndex": 4,
    "score": 0.4090909090909091,
  },
  Object {
    "item": "async beforeEach test",
    "refIndex": 1,
    "score": 0.5,
  },
  Object {
    "item": "assert.async in beforeEach",
    "refIndex": 2,
    "score": 0.5,
  },
  Object {
    "item": "beforeEach",
    "refIndex": 0,
    "score": 0.5454545454545454,
  },
]
`;

exports[`Ignore location and field length norm Check order of entries when location and field-length norm are not ignored 1`] = `
Array [
  Object {
    "item": "beforeEach",
    "refIndex": 0,
    "score": 0,
  },
  Object {
    "item": "async beforeEach test",
    "refIndex": 1,
    "score": 0.1972392177586917,
  },
  Object {
    "item": "before",
    "refIndex": 6,
    "score": 0.4,
  },
  Object {
    "item": "assert.async in beforeEach",
    "refIndex": 2,
    "score": 0.4493775633055149,
  },
  Object {
    "item": "before (skip)",
    "refIndex": 7,
    "score": 0.5231863610884103,
  },
  Object {
    "item": "Module with Promise-aware beforeEach",
    "refIndex": 3,
    "score": 0.5916079783099616,
  },
  Object {
    "item": "Promise-aware return values without beforeEach/afterEach",
    "refIndex": 4,
    "score": 0.699819425905295,
  },
]
`;

exports[`Returning all results when query is empty The entry with the shorter field length appears first 1`] = `
Array [
  Object {
    "item": Object {
      "ISBN": "0312696957",
      "author": "Steve Hamilton",
      "tags": Array [
        "fiction war hello no way",
      ],
      "title": "The Lock war Artist nonficon",
    },
    "refIndex": 0,
    "score": 1,
  },
  Object {
    "item": Object {
      "ISBN": "0765348276",
      "author": "John Scalzi",
      "tags": Array [
        "fiction no",
      ],
      "title": "Old Man's War",
    },
    "refIndex": 1,
    "score": 1,
  },
]
`;
